syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Demo";

package com.example;

service DemoService {
  rpc sendMessage(SendMessageReq) returns (Empty) {}
  rpc getMessages(Empty) returns(GetMessagesRes) {}
}

message Empty {}

message SendMessageReq {
  string message = 1;
}

message GetMessagesRes {
  repeated string messages = 1;
}